[package]
name = "zkpo"
version = "0.1.3"
edition = "2024"
description = "Zero knowledge program operations"
license = "MIT OR Apache-2.0"
repository = "https://github.com/chancehudson/zkpo.git"

[features]
default = []
risc0 = ["risc0-zkvm", "bincode"]
sp1 = ["sp1-sdk", "bincode"]

serde = [ "dep:serde" ]

[dependencies]
anyhow = "1.0.98"
bincode = { version = "1", optional = true }
risc0-zkvm = { version = "2.3.1", optional = true }
serde = { version = "1.0.219", features = ["derive"], optional = true }
#sp1-prover = { version = "4", optional = true }
sp1-sdk = { version = "4", optional = true }
#sp1-zkvm = { version = "4", optional = true }
